# cmake-dependency-submission

./: LICENSE  README.md  action.yml  package-lock.json  package.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: cmake-dependency-submission.yml  dependency-submission.yml  test.yml
example/: CMakeLists.txt
src/: cmake-detector.test.ts  cmake-detector.ts  index.ts  main.ts  parse.ts
src/__tests__/: parse.test.ts
